--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,11 @@ img.timer{
     margin: auto;
     width: 60%;
 }
+
+div.newsHeadline{
+    text-shadow: 3px 3px 3px #000;
+    font-size: 26px;
+    font-style: italic;
+    color: #fff;
+    margin-top: 30px;
+}
