--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,51 @@ body{
     font-family: "Source Code Pro", monospace;
     text-align: center;
     font-size: 40px;
-    color: rgb(242, 242, 49);
+    color: #f2f231;
     text-shadow: rgb(0, 0, 0) 8px 8px 3px;
 }
 
-img.timer{
-    display: block;
-    margin: auto;
-    width: 60%;
+p.header{
+    margin-bottom:30px;
 }
 
+a:active, a:visited, a:link{
+    color:#fff;
+}
+
+a:hover{
+    color: #f2f231;
+    text-decoration: none;
+}
+
+/* News Page */
 div.newsHeadline{
     text-shadow: 3px 3px 3px #000;
     font-size: 26px;
     font-style: italic;
     color: #fff;
-    margin-top: 30px;
+}
+
+div.newsContent{
+    margin-bottom:30px;
+}
+
+/* Contact Page */
+
+ul.contact li a:active, ul.contact li a:visited, ul.contact li a:link{
+    color: #fff;
+    text-decoration:none;
+}
+
+ul.contact li a:hover{
+    color: #f2f231;
+    text-shadow: none;
+    text-decoration:none;
+}
+
+/* Timer Page */
+img.timer{
+    display: block;
+    margin: auto;
+    width: 60%;
 }
