--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -174,3 +174,12 @@ a {
 a:hover, a:focus, a:active {
   color: #824027;
 }
+
+div.newsHeadline{
+  font-size: 26px;
+  color: #000;
+}
+
+div.newsContent{
+  margin-bottom:30px;
+}
